(fix): Media queries are aligned with selectors

--- a/src/styles/_media.sass
+++ b/src/styles/_media.sass
@@ -8,7 +8,7 @@
         padding: 0 3vw
 
 @media screen and (max-width: 992px)
-    #about .content .block.about .container 
+    .about-me .content .block.about .container
         flex-direction: column
         padding-top: 10vw
         .best-options
@@ -18,7 +18,7 @@
         .skills
             margin: 5vw auto
             width: 100%!important
-    #about .content .block.contact .container
+    .about-me .content .block.contact .container
         flex-direction: column
         align-items: center
         padding-top: 10vw
@@ -26,12 +26,12 @@
             width: 100%
             margin-top: 8vw
             margin-bottom: 5vw
-    #about .content .block.contact .container .whoami .desc
+    .about-me .content .block.contact .container .whoami .desc
         margin-top: 4vw
 
 @media screen and (max-width: 768px)
     html
-        #about .content .block.about .container 
+        .about-me .content .block.about .container
             .best-options
                 .option
                     width: 50%
@@ -51,21 +51,21 @@
             padding: 0
         #header .container
             padding: 10%
-        #about .container
+        .about-me .container
             width: 90%
-        #about .content .block.contact .container
+        .about-me .content .block.contact .container
             .contact-form
                 width: 100%
         #post-short .title, #blog-post .title
             max-width: 95vw
             letter-spacing: 1px
             font-size: 1.8rem
-        #about .content .block.about .container .best-options .option .desc 
+        .about-me .content .block.about .container .best-options .option .desc
             max-width: 180px
-        #about .content .block.contact .container .whoami .img
+        .about-me .content .block.contact .container .whoami .img
             width: 180px
             height: 180px
-        #about .content .block.about .container .best-options .option svg
+        .about-me .content .block.about .container .best-options .option svg
             width: 45%
         #post-short .image, #blog-post .image
             width: 90%
@@ -73,19 +73,18 @@
             text-align: justify
             width: 90%
             margin-bottom: 7vw
-        #post-short .separator 
+        #post-short .separator
             width: 90%
         #post-short
             margin-top: 5vw
         #post-short .date, #post-short .more
             margin-bottom: 7vw
 
-
 @media screen and (max-width: 420px)
     html
-        #main .title .routes .btn
+        main .title .routes .btn
             width: 130px
-        #about .container
+        .about-me .container
             width: 95%
             padding: 0
             margin: 0
@@ -93,7 +92,5 @@
 @media screen and (max-width: 360px)
     html
         font-size: 12px
-        #main .title .routes .btn
+        main .title .routes .btn
             width: 130px
-
-                
